--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,10 @@ jobs:
         name: selfhostblocks
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix flake check -L
+    - name: WIP check docs can be built
+      run: |
+        nix \
+          --print-build-logs \
+          --option keep-going true \
+          --show-trace \
+          build .#manualHtml
