more output when running tests in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,9 @@ jobs:
       with:
         name: selfhostblocks
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix flake check -L
+    - run: |
+        nix flake  \
+          --print-build-logs \
+          --option keep-going true \
+          --show-trace \
+          check
