add job to test building documentation in pull requests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,16 @@ jobs:
       with:
         name: selfhostblocks
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: |
+    - name: Run tests
+      run: |
         nix run github:Mic92/nix-fast-build -- \
           --skip-cached --no-nom \
           --flake ".#checks.$(nix eval --raw --impure --expr builtins.currentSystem)"
+
+    - name: Test building docs
+      run: |
+        nix \
+          --print-build-logs \
+          --option keep-going true \
+          --show-trace \
+          build .#manualHtml
