--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,25 +7,27 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: DeterminateSystems/nix-installer-action@main
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        extra-conf: "system-features = nixos-test benchmark big-parallel kvm"
-    - uses: cachix/cachix-action@v12
-      with:
-        name: selfhostblocks
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - name: Run tests
-      run: |
-        nix run github:Mic92/nix-fast-build -- \
-          --skip-cached --no-nom \
-          --flake ".#checks.$(nix eval --raw --impure --expr builtins.currentSystem)"
-
-    - name: Test building docs
-      run: |
-        nix \
-          --print-build-logs \
-          --option keep-going true \
-          --show-trace \
-          build .#manualHtml
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          extra-conf: "system-features = nixos-test benchmark big-parallel kvm"
+      - name: Setup Caching
+        uses: cachix/cachix-action@v12
+        with:
+          name: selfhostblocks
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - name: Run tests
+        run: |
+          nix run github:Mic92/nix-fast-build -- \
+            --skip-cached --no-nom \
+            --flake ".#checks.$(nix eval --raw --impure --expr builtins.currentSystem)"
+      - name: Test building docs
+        run: |
+          nix \
+            --print-build-logs \
+            --option keep-going true \
+            --show-trace \
+            build .#manualHtml
