--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,61 @@ jobs:
           nix run github:Mic92/nix-fast-build -- \
             --skip-cached --no-nom \
             --flake ".#checks.$(nix eval --raw --impure --expr builtins.currentSystem)"
+
+  # We're just checking if the demo start without hiccup.
+  demos:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        demo:
+          - homeassistant#basic
+          - homeassistant#ldap
+          - nextcloud#basic
+          - nextcloud#ldap
+          - nextcloud#sso
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          extra-conf: "system-features = nixos-test benchmark big-parallel kvm"
+      - name: Setup Caching
+        uses: cachix/cachix-action@v12
+        with:
+          name: selfhostblocks
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - name: Test demos
+        # See https://blog.stefan-koch.name/2020/12/10/qemu-guest-graceful-shutdown-from-python for
+        # inspiration.
+        run: |
+          set -x
+
+          rm -f nixos.qcow2
+          nix run nixpkgs#nixos-rebuild -- build-vm --flake ./demo/${{ matrix.demo }}
+          QEMU_NET_OPTS="hostfwd=tcp::8080-:80" ./result/bin/run-nixos-vm -nographic -qmp unix:/tmp/qmp-sock,server,nowait &
+
+          nix run nixpkgs#socat -- - unix-connect:/tmp/qmp-sock <<EOF
+          {"execute": "qmp_capabilities"}
+          {"execute": "system_powerdown"}
+          EOF
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          extra-conf: "system-features = nixos-test benchmark big-parallel kvm"
+      - name: Setup Caching
+        uses: cachix/cachix-action@v12
+        with:
+          name: selfhostblocks
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Test building docs
         run: |
           nix \
