--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,8 @@
-name: "Test"
+name: "Documentation"
 on:
   pull_request:
-  push:
-    branches: [ "main" ]
 jobs:
-  tests:
+  gen:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -19,8 +17,10 @@ jobs:
         with:
           name: selfhostblocks
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - name: Run tests
+      - name: Test building docs
         run: |
-          nix run github:Mic92/nix-fast-build -- \
-            --skip-cached --no-nom \
-            --flake ".#checks.$(nix eval --raw --impure --expr builtins.currentSystem)"
+          nix \
+            --print-build-logs \
+            --option keep-going true \
+            --show-trace \
+            build .#manualHtml
