--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -42,3 +42,20 @@ jobs:
           {"execute": "qmp_capabilities"}
           {"execute": "system_powerdown"}
           EOF
+
+  # Needed to get a status check for matrix jobs
+  # From https://github.com/orgs/community/discussions/26822
+  results:
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    name: Final Results
+    needs: [ test ]
+    steps:
+      - run: exit 1
+        # see https://stackoverflow.com/a/67532120/4907315
+        if: >-
+          ${{
+               contains(needs.*.result, 'failure')
+            || contains(needs.*.result, 'cancelled')
+            || contains(needs.*.result, 'skipped')
+          }}
