--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,5 @@ jobs:
         run: |
           nix run github:Mic92/nix-fast-build -- \
             --skip-cached --no-nom \
+            --max-jobs 2 \
             --flake ".#checks.$(nix eval --raw --impure --expr builtins.currentSystem)"
