--- a/.github/workflows/garnix.yaml
+++ b/.github/workflows/garnix.yaml
@@ -1,20 +1,22 @@
-name: "Final Results"
-
-on:
-  check_suite:
-    types: [completed]
-
-jobs:
-  results:
-    name: Final Results
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo
-      - run: exit 1
-        # see https://stackoverflow.com/a/67532120/4907315
-        if: >-
-          ${{
-               contains(needs.*.result, 'failure')
-            || contains(needs.*.result, 'cancelled')
-            || contains(needs.*.result, 'skipped')
-          }}
+# Leaving commented because it does not work.
+#
+# name: "Final Results"
+#
+# on:
+#   check_suite:
+#     types: [completed]
+#
+# jobs:
+#   results:
+#     name: Final Results
+#     runs-on: ubuntu-latest
+#     steps:
+#       - run: echo
+#       - run: exit 1
+#         # see https://stackoverflow.com/a/67532120/4907315
+#         if: >-
+#           ${{
+#                contains(needs.*.result, 'failure')
+#             || contains(needs.*.result, 'cancelled')
+#             || contains(needs.*.result, 'skipped')
+#           }}
