--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -33,6 +33,11 @@ jobs:
       - name: Install nix
         uses: cachix/install-nix-action@v20
 
+      - uses: cachix/cachix-action@v14
+        with:
+          name: mycache
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
       - name: Build ${{ matrix.demo.name }} .#${{ matrix.demo.flake }}
         run: |
           cd demo/${{ matrix.demo.name }}
