improve actions by using cachix (#276)

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,10 +28,15 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install nix
         uses: cachix/install-nix-action@v20
+
+      - uses: cachix/cachix-action@v14
+        with:
+          name: mycache
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
       - name: Build ${{ matrix.demo.name }} .#${{ matrix.demo.flake }}
         run: |
