only trigger demo build if demo path changed

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,9 +3,12 @@ name: Demo
 on:
   workflow_dispatch:
   pull_request:
+    paths: &paths
+      - 'demo/**'
   push:
     branches:
       - main
+    paths: *paths
 
 jobs:
   build:
