--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,5 +3,10 @@ on: push
 jobs:
   checks:
     uses: nixbuild/nixbuild-action/.github/workflows/ci-workflow.yml@v19
+    with:
+      nix_conf: |
+        allow-import-from-derivation = true
+      filter_builds: |
+        '.top_attr == "checks" and .system == "x86_64-linux"'
     secrets:
       nixbuild_token: ${{ secrets.nixbuild_token }}
