do not use unsupported anchors in github workflow

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,12 +3,13 @@ name: Demo
 on:
   workflow_dispatch:
   pull_request:
-    paths: &paths
+    paths:
       - 'demo/**'
   push:
     branches:
       - main
-    paths: *paths
+    paths:
+      - 'demo/**'
 
 jobs:
   build:
