include workflow file in path filtering option

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -4,11 +4,13 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
+      - '.github/workflows/demo.yml'
       - 'demo/**'
   push:
     branches:
       - main
     paths:
+      - '.github/workflows/demo.yml'
       - 'demo/**'
 
 jobs:
