fix cache in demo

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -72,7 +72,7 @@ jobs:
     if: '!cancelled()'
     steps:
       - run: |
-          result="${{ needs.tests.result }}"
+          result="${{ needs.build.result }}"
           if [[ $result == "success" || $result == "skipped" ]]; then
             exit 0
           else
