--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -54,7 +54,7 @@ jobs:
 
       - uses: cachix/cachix-action@v14
         with:
-          name: mycache
+          name: selfhostblocks
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
       - name: Build ${{ matrix.demo.name }} .#${{ matrix.demo.flake }}
