--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,29 @@ on:
     branches: [ "main" ]
 
 jobs:
+  path-filter:
+    runs-on: ubuntu-latest
+    outputs:
+      changed: ${{ steps.filter.outputs.changed }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            changed:
+              - 'lib/**'
+              - 'modules/**'
+              - '!modules/**/docs/**'
+              - 'test/**'
+              - '.github/workflows/build.yaml'
+
   build-matrix:
+    needs: [ "path-filter" ]
+    if: needs.path-filter.outputs.changed == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -91,10 +113,10 @@ jobs:
           nix build --print-build-logs --show-trace .#checks.x86_64-linux.${{ matrix.check }}
 
   results:
-    if: ${{ always() }}
-    runs-on: ubuntu-latest
     name: Final Results
+    runs-on: ubuntu-latest
     needs: [ manual, tests ]
+    if: '!cancelled()'
     steps:
       - run: |
           result="${{ needs.tests.result }}"
