--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,8 @@ jobs:
             modules/**
             !modules/**/docs/**
             test/**
+            flake.lock
+            flake.nix
             .github/workflows/build.yaml
           separator: "\n"
 
