--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -119,6 +119,12 @@ jobs:
       - name: Build
         run: |
           nix build --print-build-logs --show-trace .#checks.x86_64-linux.${{ matrix.check }}
+          echo "resultPath=$(nix eval .#checks.x86_64-linux.vm_grocy_basic --raw)" >> $GITHUB_ENV
+      - name: Upload Build Result
+        uses: actions/upload-artifact@v4
+        with:
+          path: ${{ env.resultPath }}/**/*
+          overwrite: true
 
   results:
     name: Final Results
