--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -124,6 +124,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
+          name: ${{ matrix.check }}
           path: ${{ env.resultPath }}/**/*
           overwrite: true
 
