--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -101,6 +101,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ "build-matrix" ]
     strategy:
+      fail-fast: false
       matrix:
         check: ${{ fromJson(needs.build-matrix.outputs.check) }}
     steps:
