ci: only keep traces as artifacts

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -126,7 +126,7 @@ jobs:
         if: always()
         with:
           name: ${{ matrix.check }}
-          path: ${{ env.resultPath }}/**/*
+          path: ${{ env.resultPath }}/trace/*
           overwrite: true
 
   results:
