--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -121,6 +121,7 @@ jobs:
         run: |
           echo "resultPath=$(nix eval .#checks.x86_64-linux.${{ matrix.check }} --raw)" >> $GITHUB_ENV
           nix build --print-build-logs --show-trace --keep-outputs --keep-failed .#checks.x86_64-linux.${{ matrix.check }}
+          ls result
       - name: Upload Build Result
         uses: actions/upload-artifact@v4
         if: startsWith(matrix.check, 'vm_')
