--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -128,6 +128,7 @@ jobs:
           name: ${{ matrix.check }}
           path: ${{ env.resultPath }}/trace/*
           overwrite: true
+          if-no-files-found: ignore
 
   results:
     name: Final Results
