--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -132,7 +132,7 @@ jobs:
           nix build --print-build-logs --show-trace --keep-outputs --keep-failed .#checks.x86_64-linux.${{ matrix.check }}
       - name: Upload Build Result
         uses: actions/upload-artifact@v4
-        if: startsWith(matrix.check, 'vm_')
+        if: always() && startsWith(matrix.check, 'vm_')
         with:
           name: ${{ matrix.check }}
           path: ${{ env.resultPath }}/trace/*
