--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -60,8 +60,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Install nix
+      - name: Install Nix
         uses: cachix/install-nix-action@v31
+        with:
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          enable_kvm: true
+          extra_nix_config: |
+            keep-outputs = true
+            keep-failed = true
 
       - uses: cachix/cachix-action@v16
         with:
