--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -40,6 +40,7 @@ jobs:
     needs: [ "path-filter" ]
     if: needs.path-filter.outputs.changed == 'true'
     strategy:
+      fail-fast: false
       matrix:
         demo:
           - name:  homeassistant
